--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
  */
 
 body,html {
-	background-color: #3b4b54; width : 100%;
+	/*background-color: #3b4b54; width : 100%;*/
 	height: 100%;
 	margin: 0 auto;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	color: #ffffff;
+	color: #26343f;
 }
 
 a {
@@ -24,7 +24,7 @@ a:hover {
 	display: block;
 	margin: 0 auto;
 	padding-bottom: 2em;
-	max-width:200px;
+	/*max-width:200px;*/
 }
 
 h1 {
